--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "front-end-learning",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "description": "A mobile page",
+  "main": "mobile.html",
   "scripts": {
+    "start": "live-server --port=2236 --open=mobile.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/RedOvO/Front-end-Learning/issues"
   },
-  "homepage": "https://github.com/RedOvO/Front-end-Learning#readme"
+  "homepage": "https://github.com/RedOvO/Front-end-Learning#readme",
+  "devDependencies": {
+    "live-server": "^1.2.1"
+  },
+  "dependencies": {}
 }
