--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front-end-learning",
   "version": "1.0.0",
   "description": "A mobile page",
-  "main": "mobile.html",
+  "main": "webpack-learning/public/index.html",
   "scripts": {
     "start": "live-server --port=2236 --open=mobile.html",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,7 +18,16 @@
   },
   "homepage": "https://github.com/RedOvO/Front-end-Learning#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "live-server": "^1.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "css-loader": "^2.1.1",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "style-loader": "^0.23.1"
+  }
 }
