--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^2.1.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.6"
   }
 }
